[package]
name = "tsuiiblog"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
axum = "0.7"
chrono = "0.4"
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.4", features = [ "postgres", "r2d2", "async-connection-wrapper"] } 
diesel_migrations = "2.1"
futures-util = "0.3.30"
jsonwebtoken = "9.3"
lettre = "0.11"
reqwest = "0.12"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
toml = "0.8"
tracing = "0.1.40"
tracing-subscriber = "0.3"
uuid = { version = "1.8", features = ["v4", "macro-diagnostics"] }
