[package]
name = "tsuiiblog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1"
axum = "0.7"
bb8 = "0.8.3"
chrono = "0.4"
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.4", features = [ "postgres", "bb8", "async-connection-wrapper"] } 
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel_migrations = "2.1"
futures-util = "0.3.30"
jsonwebtoken = "9.3"
lettre = "0.11"
once_cell = "1.19.0"
reqwest = "0.12"
rustls = "0.23.8"
rustls-native-certs = "0.7.0"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tokio-postgres = "0.7.10"
tokio-postgres-rustls = "0.12.0"
toml = "0.8"
tracing = "0.1.40"
tracing-subscriber = "0.3"
uuid = { version = "1.8", features = ["v4", "macro-diagnostics"] }
