[package]
name = "tsuiiblog"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5.3"
async-trait = "0.1"
axum = "0.7"
axum-extra = {version = "0.9.3", features = ["typed-header"] }
utoipa = { version = "5.0.0-alpha.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7.1.1-alpha.0", features = ["axum"] }
bb8 = "0.8"
chrono = {version = "0.4", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.4", features = [ "postgres", "bb8"] } 
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
diesel_migrations = "2.1"
futures-util = "0.3"
jsonwebtoken = "9.3"
lettre = "0.11"
once_cell = "1.19"
rand = "0.8"
reqwest = "0.12"
rustls = "0.23"
rustls-native-certs = "0.7"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
tokio = { version =  "1.38", features = ["rt-multi-thread", "macros", "time", "signal"] }
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.12"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.8", features = ["v4", "macro-diagnostics", "serde"] }
figment = { version = "0.10", features = ["env", "toml"] }
clap = { version = "4.5", features = ["derive","env"] }
clap_derive = "4.5"
dotenvy = "0.15"
